# paris-ai

./: .gitignore  README.md  chatgpt_instructions.md  main.py  openapi.yaml  package-lock.json  package.json  pyproject.toml  test_mcp.py
backend/: __init__.py  ai_players.py  api.py  app.py  game_engine.py  models.py  tts_service.py  tts_services.py
frontend/: inspiration.ts  package-lock.json  package.json
frontend/src/: App.css  App.tsx  AppNew.css  api.ts  index.css  types.ts
frontend/src/components/: ActionPanel.css  ActionPanel.tsx  ChatPanel.css  ChatPanel.tsx  DiscussionPanel.css  DiscussionPanel.tsx  EventLog.tsx  GameBoard.css  GameBoard.tsx  GameOver.css  GameOver.tsx  PhaseIndicator.css  PhaseIndicator.tsx  PlayerAvatar.css  PlayerAvatar.tsx  PlayerCard.css  PlayerCard.tsx  SpeechBubble.css  StartScreen.css  StartScreen.tsx
frontend/src/hooks/: useFalImage.ts
frontend/src/services/: ttsService.ts
loup-garou/: README.md  main.py  pyproject.toml  requirements.txt  test_mcp.py
loup-garou/backend/: ai_players.py  api.py  game_engine.py  models.py
loup-garou/frontend/: index.html  package-lock.json  package.json
loup-garou/frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
loup-garou/frontend/src/components/: ActionPanel.css  ActionPanel.tsx  ChatPanel.tsx  GameBoard.css  GameInterface.tsx  GameOver.tsx  PhaseIndicator.tsx  PlayerAvatar.css  PlayerCard.tsx  SpeechBubble.tsx  StartScreen.css  StartScreen.tsx
loup-garou/frontend/src/hooks/: useFalImage.ts
loup-garou/src/: api.py  mcp_server.py  models.py
