[project]
name = "loup-garou-mcp"
version = "1.0.0"
description = "Serveur MCP pour jouer au Loup-Garou avec des IA"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
]

[project.scripts]
loup-garou = "src.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
