[project]
name = "loup-garou-mcp"
version = "1.0.0"
description = "Serveur MCP pour jouer au Loup-Garou avec des IA"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.4",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
loup-garou = "backend.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
